<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/colorAccent"
              android:gravity="top"
              android:orientation="vertical"
              android:padding="8dp"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/ll_nav_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="left|center"
            android:src="@drawable/menu_avatar"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/favorites"
            android:gravity="center"
            android:text="@string/my_star"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_offline_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/download"
            android:gravity="center"
            android:text="@string/offline"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="invisible"
            />
    </LinearLayout>
</LinearLayout>